self-hosted-services/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - immich.crobceratops.ryanbeales.com
    - immich.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''	
          kind: Service
          name: immich-server
          port: 2283
